Index HTML Updates

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1>Test</h1>
+<p>This is a test page.</p>
+<p>It contains some sample text to demonstrate HTML structure.</p>
+<p>Feel free to modify and expand upon this content as needed.</p>
+<p>Thank you for visiting!</p>
