Update from a new branch

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>It contains some sample text to demonstrate HTML structure.</p>
 <p>Feel free to modify and expand upon this content as needed.</p>
 <p>Thank you for visiting!</p>
+<p>Have a great day!</p>
